Bug 235201 - 'Show items that recur weekly' functionality not working
Summary: 'Show items that recur weekly' functionality not working
Status: VERIFIED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-04-23 19:35 UTC by Sabine Faure
Modified: 2010-05-06 20:10 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2010-04-23 19:35:57 UTC
Version:            (using Devel)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Compiled sources

- Launch KOrg
- Create a new recurring weekly event over 3 weeks
- Check that the recurring events are displayed correctly in date navigator view (the dates for the recurring events should be displayed in bold).
- Go to Settings menu/Configure KOrganizer...
- Click on 'Views' icon 
- In the 'General' tab uncheck the 'Show items that recur weekly' check box from the 'Date Navigator section.
- Click on 'Ok'

Nothing happens: the dates during which the weekly recurring events recur are still displayed in bold whereas they should not be anymore.

Trunk, Svn Rev 1117862
Comment 1 Sergio Martins 2010-05-02 04:56:51 UTC
SVN commit 1121672 by smartins:

Update the date navigator after config changes.

BUG: 235201
BUG: 235200


 M  +2 -0      kdatenavigator.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1121672
Comment 2 Sabine Faure 2010-05-06 20:10:47 UTC
It is corrected now.

The 'Show items that recur weekly' functionality works properly now.

Trunk, Svn Rev 1123669