Update the date navigator after config changes.

BUG: 235201
BUG: 235200

svn path=/trunk/KDE/kdepim/; revision=1121672