kdatenavigator.cpp
@@ -247,6 +247,8 @@ void KDateNavigator::updateConfig()
     mHeadings[i]->setWhatsThis(
       i18n( "A column header of the %1 dates in the month.", longDayName ) );
   }
+  mDayMatrix->setUpdateNeeded();
+  updateDayMatrix();
   update();
   // FIXME: Use actual config setting here
 //  setShowWeekNums( true );
